; ModuleID = '/home/carl/AnghaBench/sway/swaybar/extr_render.c_render_sharp_rectangle.c'
source_filename = "/home/carl/AnghaBench/sway/swaybar/extr_render.c_render_sharp_rectangle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CAIRO_ANTIALIAS_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, double, double, double, double)* @render_sharp_rectangle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @render_sharp_rectangle(i32* %0, i32 %1, double %2, double %3, double %4, double %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca double, align 8
  %10 = alloca double, align 8
  %11 = alloca double, align 8
  %12 = alloca double, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store double %2, double* %9, align 8
  store double %3, double* %10, align 8
  store double %4, double* %11, align 8
  store double %5, double* %12, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @cairo_save(i32* %13)
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @cairo_set_source_u32(i32* %15, i32 %16)
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* @CAIRO_ANTIALIAS_NONE, align 4
  %20 = call i32 @cairo_set_antialias(i32* %18, i32 %19)
  %21 = load i32*, i32** %7, align 8
  %22 = load double, double* %9, align 8
  %23 = load double, double* %10, align 8
  %24 = load double, double* %11, align 8
  %25 = load double, double* %12, align 8
  %26 = call i32 @cairo_rectangle(i32* %21, double %22, double %23, double %24, double %25)
  %27 = load i32*, i32** %7, align 8
  %28 = call i32 @cairo_fill(i32* %27)
  %29 = load i32*, i32** %7, align 8
  %30 = call i32 @cairo_restore(i32* %29)
  ret void
}

declare dso_local i32 @cairo_save(i32*) #1

declare dso_local i32 @cairo_set_source_u32(i32*, i32) #1

declare dso_local i32 @cairo_set_antialias(i32*, i32) #1

declare dso_local i32 @cairo_rectangle(i32*, double, double, double, double) #1

declare dso_local i32 @cairo_fill(i32*) #1

declare dso_local i32 @cairo_restore(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
